In machine_learning_template.ipynb > Data Preprocessing > Engineering New Features section: Use X_train, X_val, and X_test instead of df

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -651,10 +651,12 @@
     "    return np.nan  # Return a missing value if no keyword matches\n",
     "\n",
     "# Apply function on an existing string column to create a new categorical feature column\n",
-    "df[\"categorical_feature\"] = df[\"str_column\"].apply(extract_category_from_string)\n",
+    "X_train[\"categorical_feature\"] = X_train[\"str_column\"].apply(extract_category_from_string)\n",
+    "X_val[\"categorical_feature\"] = X_val[\"str_column\"].apply(extract_category_from_string)\n",
+    "X_test[\"categorical_feature\"] = X_test[\"str_column\"].apply(extract_category_from_string)\n",
     "\n",
     "# Show category frequencies\n",
-    "print(df[\"categorical_feature\"].value_counts())"
+    "print(X_train[\"categorical_feature\"].value_counts())"
    ]
   },
   {
@@ -685,10 +687,12 @@
     "        return np.nan  # Return a missing value if no number in string\n",
     "\n",
     "# Apply function on an existing string column to create a new numerical feature column\n",
-    "df[\"numerical_feature\"] = df[\"str_column\"].apply(extract_number_from_string)\n",
+    "X_train[\"numerical_feature\"] = X_train[\"str_column\"].apply(extract_number_from_string)\n",
+    "X_val[\"numerical_feature\"] = X_val[\"str_column\"].apply(extract_number_from_string)\n",
+    "X_test[\"numerical_feature\"] = X_test[\"str_column\"].apply(extract_number_from_string)\n",
     "\n",
     "# Show descriptive statistics of numerical feature\n",
-    "df[\"numerical_feature\"].describe()"
+    "X_train[\"numerical_feature\"].describe()"
    ]
   },
   {
@@ -711,10 +715,12 @@
     "keywords = [\"keyword 1\", \"keyword 2\", \"keyword 3\"]\n",
     "\n",
     "# Extract boolean feature column: True if any keyword is found in the string column\n",
-    "df[\"boolean_feature\"] = df[\"str_column\"].apply(lambda x: any(keyword.lower() in x.lower() for keyword in keywords))\n",
+    "X_train[\"boolean_feature\"] = X_train[\"str_column\"].apply(lambda x: any(keyword.lower() in x.lower() for keyword in keywords))\n",
+    "X_val[\"boolean_feature\"] = X_val[\"str_column\"].apply(lambda x: any(keyword.lower() in x.lower() for keyword in keywords))\n",
+    "X_test[\"boolean_feature\"] = X_test[\"str_column\"].apply(lambda x: any(keyword.lower() in x.lower() for keyword in keywords))\n",
     "\n",
     "# Show frequencies of boolean feature\n",
-    "print(df[\"boolean_feature\"].value_counts())"
+    "print(X_train[\"boolean_feature\"].value_counts())"
    ]
   },
   {
