--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -834,7 +834,8 @@
    "outputs": [],
    "source": [
     "# Identify storage data types\n",
-    "df.dtypes()"
+    "print(X_train.dtypes())\n",
+    "print(y_train.dtypes())"
    ]
   },
   {
@@ -866,10 +867,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Merge X_train and y_train\n",
+    "df_train = pd.concat([X_train, y_train], axis=1)\n",
+    "\n",
     "# Define semantic column types programmatically based on storage data types\n",
-    "numerical_columns = df.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
-    "categorical_columns = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
-    "boolean_columns = df.select_dtypes(include=[\"bool\"]).columns.tolist()"
+    "numerical_columns = df_train.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
+    "categorical_columns = df_train.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+    "boolean_columns = df_train.select_dtypes(include=[\"bool\"]).columns.tolist()"
    ]
   },
   {
