--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2815589-353e-48a4-8941-4a56b037e33a",
+   "id": "e75088ce-c0c6-4e46-bd24-07661ed7eb06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,54 +1069,72 @@
     "    def fit(self, df, numerical_columns):\n",
     "        # Convert single column string to list\n",
     "        if isinstance(numerical_columns, str):\n",
-    "            numerical_columns = [numerical_columns]\n",
+    "            self.numerical_columns_ = [numerical_columns]\n",
+    "        else:\n",
+    "            self.numerical_columns_ = numerical_columns\n",
     "            \n",
     "        # Calculate statistics (mean, standard deviation, cutoff values) for each column\n",
-    "        self.stats_ = pd.DataFrame(index=numerical_columns)\n",
-    "        self.stats_[\"mean\"] = df[numerical_columns].mean()\n",
-    "        self.stats_[\"sd\"] = df[numerical_columns].std()\n",
+    "        self.stats_ = pd.DataFrame(index=self.numerical_columns_)\n",
+    "        self.stats_[\"mean\"] = df[self.numerical_columns_].mean()\n",
+    "        self.stats_[\"sd\"] = df[self.numerical_columns_].std()\n",
     "        self.stats_[\"lower_cutoff\"] = self.stats_[\"mean\"] - 3 * self.stats_[\"sd\"]\n",
     "        self.stats_[\"upper_cutoff\"] = self.stats_[\"mean\"] + 3 * self.stats_[\"sd\"]\n",
-    "\n",
+    "        \n",
     "        # Create masks for filtering outliers \n",
-    "        self.masks_ = (df[numerical_columns] >= self.stats_[\"lower_cutoff\"]) & (df[numerical_columns] <= self.stats_[\"upper_cutoff\"])  # masks by column\n",
+    "        self.masks_ = (df[self.numerical_columns_] >= self.stats_[\"lower_cutoff\"]) & (df[self.numerical_columns_] <= self.stats_[\"upper_cutoff\"])  # masks by column\n",
     "        self.final_mask_ = self.masks_.all(axis=1)  # single mask across all columns\n",
-    "\n",
+    "     \n",
     "        # Calculate number of outliers\n",
     "        self.stats_[\"outliers\"] = (~self.masks_).sum()  # by column\n",
     "        self.outliers_ = (~self.final_mask_).sum()  # across all columns\n",
     "        \n",
-    "        # Show statistics and number of outliers\n",
-    "        print(f\"Statistics and outliers: \\n{self.stats_}\")\n",
-    "        if len(numerical_columns) == 1:\n",
-    "            print(f\"\\n{self.outliers_} rows contain outliers in the '{numerical_columns[0]}' column.\")\n",
+    "        # Show outliers across all columns\n",
+    "        if len(self.numerical_columns_) == 1:\n",
+    "            print(f\"\\nIdentified {self.outliers_} rows ({self.outliers_ / len(self.final_mask_) * 100:.1f}%) with outliers in the '{self.numerical_columns_[0]}' column.\")\n",
     "        else:\n",
-    "            print(f\"\\n{self.outliers_} rows contain outliers in one or more numerical columns.\")\n",
-    "  \n",
+    "            print(f\"\\nIdentified {self.outliers_} rows ({self.outliers_ / len(self.final_mask_) * 100:.1f}%) with outliers in one or more numerical columns.\")\n",
+    " \n",
     "        return self\n",
     "\n",
     "    def transform(self, df):\n",
+    "        # Create masks for new df\n",
+    "        masks = (df[self.numerical_columns_] >= self.stats_[\"lower_cutoff\"]) & (df[self.numerical_columns_] <= self.stats_[\"upper_cutoff\"])  # masks by column\n",
+    "        final_mask = masks.all(axis=1)  # single mask across all columns\n",
+    "        \n",
     "        # Remove outliers based on the final mask\n",
-    "        print(f\"{self.outliers_} rows with outliers removed.\")\n",
-    "        return df[self.final_mask_]\n",
+    "        print(f\"Removed {(~final_mask).sum()} rows ({(~final_mask).sum() / len(final_mask) * 100:.1f}%) with outliers.\")\n",
+    "        return df[final_mask]\n",
     "\n",
     "    def fit_transform(self, df, numerical_columns):\n",
     "        # Perform both fit and transform \n",
-    "        return self.fit(df, numerical_columns).transform(df)"
+    "        return self.fit(df, numerical_columns).transform(df)\n",
+    "\n",
+    "\n",
+    "# Initialize outlier remover \n",
+    "outlier_remover_3sd = OutlierRemover3SD()\n",
+    "\n",
+    "# Fit outlier remover to training data\n",
+    "outlier_remover_3sd.fit(X_train, numerical_columns)\n",
+    "\n",
+    "# Show mean, sd, cutoff values, and outliers by column for training data\n",
+    "print(\"\\nOutliers by column:\")\n",
+    "round(outlier_remover_3sd.stats_, 2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e1d2263-e9de-4b53-8ada-61e1cf8433b2",
+   "id": "58debb7b-adfd-425a-96b1-bf309a4ef761",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize outlier remover \n",
-    "outlier_remover_3sd = OutlierRemover3SD()\n",
-    "\n",
-    "# Identify and remove outliers\n",
-    "df = outlier_remover_3sd.fit_transform(df, numerical_columns)"
+    "# Remove outliers\n",
+    "print(\"Training Data:\")\n",
+    "X_train_no_outliers = outlier_remover_3sd.transform(X_train)\n",
+    "print(\"\\nValidation Data:\")\n",
+    "X_val_no_outliers = outlier_remover_3sd.transform(X_val)\n",
+    "print(\"\\nTest Data:\")\n",
+    "X_test_no_outliers = outlier_remover_3sd.transform(X_test)"
    ]
   },
   {
