In machine_learning_template.ipynb > Data Preprocessing > Handling Outliers > 1.5 IQR Method section: Update code for custom OutlierHandlerIQR class and use X_train, X_val and X_test instead of df

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1158,41 +1158,57 @@
     "    def fit(self, df, numerical_columns):\n",
     "        # Convert single column string to list\n",
     "        if isinstance(numerical_columns, str):\n",
-    "            numerical_columns = [numerical_columns]\n",
+    "            self.numerical_columns_ = [numerical_columns]\n",
+    "        else:\n",
+    "            self.numerical_columns_ = numerical_columns\n",
     "        \n",
     "        # Calculate statistics (first quartile, third quartile, interquartile range, cutoff values) for each column\n",
-    "        self.stats_ = pd.DataFrame(index=numerical_columns)\n",
-    "        self.stats_[\"Q1\"] = df[numerical_columns].quantile(0.25)\n",
-    "        self.stats_[\"Q3\"] = df[numerical_columns].quantile(0.75)\n",
+    "        self.stats_ = pd.DataFrame(index=self.numerical_columns_)\n",
+    "        self.stats_[\"Q1\"] = df[self.numerical_columns_].quantile(0.25)\n",
+    "        self.stats_[\"Q3\"] = df[self.numerical_columns_].quantile(0.75)\n",
     "        self.stats_[\"IQR\"] = self.stats_[\"Q3\"] - self.stats_[\"Q1\"]\n",
     "        self.stats_[\"lower_cutoff\"] = self.stats_[\"Q1\"] - 1.5 * self.stats_[\"IQR\"]\n",
     "        self.stats_[\"upper_cutoff\"] = self.stats_[\"Q3\"] + 1.5 * self.stats_[\"IQR\"]\n",
     "\n",
     "        # Create masks for filtering outliers \n",
-    "        self.masks_ = (df[numerical_columns] >= self.stats_[\"lower_cutoff\"]) & (df[numerical_columns] <= self.stats_[\"upper_cutoff\"])  # masks by column\n",
+    "        self.masks_ = (df[self.numerical_columns_] >= self.stats_[\"lower_cutoff\"]) & (df[self.numerical_columns_] <= self.stats_[\"upper_cutoff\"])  # masks by column\n",
     "        self.final_mask_ = self.masks_.all(axis=1)  # single mask across all columns\n",
     "\n",
     "        # Calculate number of outliers\n",
     "        self.stats_[\"outliers\"] = (~self.masks_).sum()  # by column\n",
     "        self.outliers_ = (~self.final_mask_).sum()  # across all columns\n",
-    "               \n",
-    "        # Show statistics and number of outliers\n",
-    "        print(f\"Statistics and outliers: \\n{self.stats_}\")\n",
-    "        if len(numerical_columns) == 1:\n",
-    "            print(f\"\\n{self.outliers_} rows contain outliers in the '{numerical_columns[0]}' column.\")\n",
-    "        else:\n",
-    "            print(f\"\\n{self.outliers_} rows contain outliers in one or more numerical columns.\")\n",
     "        \n",
+    "        # Show outliers across all columns\n",
+    "        if len(self.numerical_columns_) == 1:\n",
+    "            print(f\"\\nIdentified {self.outliers_} rows ({self.outliers_ / len(self.final_mask_) * 100:.1f}%) with outliers in the '{numerical_columns[0]}' column.\")\n",
+    "        else:\n",
+    "            print(f\"\\nIdentified {self.outliers_} rows ({self.outliers_ / len(self.final_mask_) * 100:.1f}%) with outliers in one or more numerical columns.\")\n",
+    "            \n",
     "        return self\n",
     "\n",
     "    def transform(self, df):\n",
+    "        # Create masks for new df\n",
+    "        masks = (df[self.numerical_columns_] >= self.stats_[\"lower_cutoff\"]) & (df[self.numerical_columns_] <= self.stats_[\"upper_cutoff\"])  # masks by column\n",
+    "        final_mask = masks.all(axis=1)  # single mask across all columns\n",
+    "        \n",
     "        # Remove outliers based on the final mask\n",
-    "        print(f\"{self.outliers_} rows with outliers removed.\")\n",
-    "        return df[self.final_mask_]\n",
+    "        print(f\"Removed {(~final_mask).sum()} rows ({(~final_mask).sum() / len(final_mask) * 100:.1f}%) with outliers.\")\n",
+    "        return df[final_mask]\n",
     "\n",
     "    def fit_transform(self, df, numerical_columns):\n",
     "        # Perform both fit and transform\n",
-    "        return self.fit(df, numerical_columns).transform(df)"
+    "        return self.fit(df, numerical_columns).transform(df)\n",
+    "\n",
+    "\n",
+    "# Initialize outlier remover \n",
+    "outlier_remover_iqr = OutlierRemoverIQR()\n",
+    "\n",
+    "# Fit outlier remover to training data\n",
+    "outlier_remover_iqr.fit(X_train, numerical_columns)\n",
+    "\n",
+    "# Show outliers by column for training data\n",
+    "print(\"\\nOutliers by column:\")\n",
+    "round(outlier_remover_iqr.stats_, 2)"
    ]
   },
   {
@@ -1202,11 +1218,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize outlier remover \n",
-    "outlier_remover_iqr = OutlierRemoverIQR()\n",
-    "\n",
-    "# Identify and remove outliers\n",
-    "df = outlier_remover_iqr.fit_transform(df, numerical_columns)"
+    "# Remove outliers\n",
+    "print(\"Training Data:\")\n",
+    "X_train_no_outliers = outlier_remover_iqr.transform(X_train)\n",
+    "print(\"\\nValidation Data:\")\n",
+    "X_val_no_outliers = outlier_remover_iqr.transform(X_val)\n",
+    "print(\"\\nTest Data:\")\n",
+    "X_test_no_outliers = outlier_remover_iqr.transform(X_test)"
    ]
   },
   {
