In machine_learning_template.ipynb > Data Preprocessing > Handling Outliers > Isolation Forest section: Use X_train, X_val and X_test instead of df

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1249,17 +1249,29 @@
     "# Define columns to use: All numerical and boolean features \n",
     "numerical_boolean_features = numerical_columns + boolean_columns  # Remove the target variable if necessary\n",
     "\n",
-    "# Fit isolation forest\n",
-    "isolation_forest.fit(df[numerical_boolean_features])\n",
+    "# Fit isolation forest on training data\n",
+    "isolation_forest.fit(X_train[numerical_boolean_features])\n",
     "\n",
-    "# Predict outliers\n",
-    "df[\"outlier\"] = isolation_forest.predict(df[numerical_boolean_features])\n",
-    "df[\"outlier_score\"] = isolation_forest.decision_function(df[numerical_boolean_features])\n",
+    "# Predict outliers on training, validation, and test data\n",
+    "X_train[\"outlier\"] = isolation_forest.predict(X_train[numerical_boolean_features])\n",
+    "X_train[\"outlier_score\"] = isolation_forest.decision_function(X_train[numerical_boolean_features])\n",
+    "X_val[\"outlier\"] = isolation_forest.predict(X_val[numerical_boolean_features])\n",
+    "X_val[\"outlier_score\"] = isolation_forest.decision_function(X_val[numerical_boolean_features])\n",
+    "X_test[\"outlier\"] = isolation_forest.predict(X_test[numerical_boolean_features])\n",
+    "X_test[\"outlier_score\"] = isolation_forest.decision_function(X_test[numerical_boolean_features])\n",
     "\n",
     "# Show number of outliers\n",
-    "n_outliers = df[\"outlier\"].value_counts()[-1]\n",
-    "contamination = df[\"outlier\"].value_counts()[-1] / df_train[\"outlier\"].value_counts().sum()\n",
-    "print(f\"{n_outliers} rows ({100 * contamination:.1f}%) were identified as multivariate outliers.\")"
+    "n_outliers_train = X_train[\"outlier\"].value_counts()[-1]\n",
+    "contamination_train = X_train[\"outlier\"].value_counts()[-1] / X_train[\"outlier\"].value_counts().sum()\n",
+    "print(f\"Training Data: Identified {n_outliers_train} rows ({100 * contamination_train:.1f}%) as multivariate outliers.\")\n",
+    "\n",
+    "n_outliers_val = X_val[\"outlier\"].value_counts()[-1]\n",
+    "contamination_val = X_val[\"outlier\"].value_counts()[-1] / X_val[\"outlier\"].value_counts().sum()\n",
+    "print(f\"Validation Data: Identified {n_outliers_val} rows ({100 * contamination_val:.1f}%) as multivariate outliers.\")\n",
+    "\n",
+    "n_outliers_test = X_test[\"outlier\"].value_counts()[-1]\n",
+    "contamination_test = X_test[\"outlier\"].value_counts()[-1] / X_test[\"outlier\"].value_counts().sum()\n",
+    "print(f\"Test Data: Identified {n_outliers_test} rows ({100 * contamination_test:.1f}%) as multivariate outliers.\")"
    ]
   },
   {
@@ -1269,20 +1281,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scatter plot matrix to visualize outliers\n",
-    "df_subsample = df[numerical_boolean_features + [\"outlier\"]].sample(n=5000, random_state=42)\n",
-    "sns.pairplot(df_subsample, hue=\"outlier\", palette={1: \"#4F81BD\", -1: \"#D32F2F\"}, plot_kws={\"alpha\":0.6, \"s\":40})"
+    "# Scatter plot matrix to visualize outliers for a subsample of the training data\n",
+    "X_train_subsample = X_train[numerical_boolean_features + [\"outlier\"]].sample(n=5000, random_state=42)\n",
+    "sns.pairplot(X_train_subsample, hue=\"outlier\", palette={1: \"#4F81BD\", -1: \"#D32F2F\"}, plot_kws={\"alpha\":0.6, \"s\":40})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4506ce8b-9351-4d40-a45a-90a80681b7e1",
+   "id": "49fa2c6a-2555-4437-8694-ee777544fbfb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Remove outliers\n",
-    "df = df[df[\"outlier\"] == 1]"
+    "X_train_no_outliers = X_train[X_train[\"outlier\"] == 1]\n",
+    "print(f\"Training Data: Removed {X_train[X_train['outlier'] == -1].shape[0]} rows ({X_train[X_train['outlier'] == -1].shape[0] / X_train.shape[0] * 100:.1f}%) with multivariate outliers.\") \n",
+    "X_val_no_outliers = X_val[X_val[\"outlier\"] == 1]\n",
+    "print(f\"Validation Data: Removed {X_val[X_val['outlier'] == -1].shape[0]} rows ({X_val[X_val['outlier'] == -1].shape[0] / X_val.shape[0] * 100:.1f}%) with multivariate outliers.\") \n",
+    "X_test_no_outliers = df_test[X_test[\"outlier\"] == 1]\n",
+    "print(f\"Test Data: Removed {X_test[X_test['outlier'] == -1].shape[0]} rows ({X_test[X_test['outlier'] == -1].shape[0] / X_test.shape[0] * 100:.1f}%) with multivariate outliers.\") "
    ]
   },
   {
