In machine_learning_template.ipynb > Data Preprocessing section: Move Feature Scaling and Encoding section below Handling Outliers section and update code to preserve column names for transformed data

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1304,6 +1304,69 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d61a03f6-0eca-405d-b01a-5ae61fb8d9ac",
+   "metadata": {},
+   "source": [
+    "## Feature Scaling and Encoding  \n",
+    "Use a `ColumnTransformer` to preprocess columns based on their semantic type. This allows the appropriate transformation to each semantic column type in a single step.  \n",
+    "\n",
+    "- Scale numerical columns:\n",
+    "    - `StandardScaler`: Scales features to have mean = 0 and standard deviation = 1.\n",
+    "    - `MinMaxScaler`: Scales features to a range between [0, 1].\n",
+    "- Encode categorical columns:\n",
+    "    - Nominal columns: `OneHotEncoder` to convert string categories into binary (one-hot) encoded columns; use for unordered categories (e.g., red, green, blue).\n",
+    "    - Ordinal columns: `OrdinalEncoder` to convert string categories into integers; use for ordered categories (e.g., low, medium, high).\n",
+    "- Retain boolean columns: Pass through boolean columns unchanged using `remainder=\"passthrough\"`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff8131ac-71a4-48c7-bbf0-cecc33d66843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define nominal and ordinal columns\n",
+    "nominal_columns = [\"nominal_column_1\", \"nominal_column_2\", \"nominal_column_3\"]\n",
+    "ordinal_columns = [\"ordinal_column_1\", \"ordinal_column_2\", \"ordinal_column_3\"]\n",
+    "\n",
+    "# Define the explicit order of categories for all ordinal columns\n",
+    "ordinal_column_orders = [\n",
+    "    [\"low\", \"medium\", \"high\"],  # Order for ordinal_column_1\n",
+    "    [\"poor\", \"average\", \"good\", \"excellent\"],  # Order for ordinal_column_2\n",
+    "    [\"small\", \"medium\", \"large\"]  # Order for ordinal_column_3\n",
+    "]\n",
+    "\n",
+    "# Initialize a column transformer \n",
+    "column_transformer = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"scaler\", StandardScaler(), numerical_columns),  # Use MinMaxScaler() for min-max normalization\n",
+    "        (\"nominal_encoder\", OneHotEncoder(drop=\"first\"), nominal_columns),\n",
+    "        (\"ordinal_encoder\", OrdinalEncoder(categories=ordinal_column_orders), ordinal_columns)  \n",
+    "    ],\n",
+    "    remainder=\"passthrough\" \n",
+    ")\n",
+    "\n",
+    "# Fit the column transformer to the training data and apply transformations\n",
+    "X_train_transformed = column_transformer.fit_transform(X_train)\n",
+    "\n",
+    "# Apply the same transformations to the validation and test data\n",
+    "X_val_transformed = column_transformer.transform(X_val)\n",
+    "X_test_transformed = column_transformer.transform(X_test)\n",
+    "\n",
+    "# Get transformed column names\n",
+    "nominal_encoded_columns = list(column_transformer.named_transformers_[\"nominal_encoder\"].get_feature_names_out())\n",
+    "passthrough_columns = list(X_train.columns.difference(numerical_columns + nominal_columns + ordinal_columns, sort=False))\n",
+    "transformed_columns = numerical_columns + nominal_encoded_columns + ordinal_columns + passthrough_columns\n",
+    "\n",
+    "# Convert transformed data from arrays to DataFrames with column names \n",
+    "X_train_transformed = pd.DataFrame(X_train_transformed, columns=transformed_columns)\n",
+    "X_val_transformed = pd.DataFrame(X_val_transformed, columns=transformed_columns)\n",
+    "X_test_transformed = pd.DataFrame(X_test_transformed, columns=transformed_columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "63d48183-607c-4d2b-a462-7d22b0ee0fc4",
    "metadata": {},
    "source": [
@@ -1975,66 +2038,6 @@
     "\n",
     "# Show the plot\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "41fa08ad-5d29-458d-8b5d-5153f7c5028e",
-   "metadata": {},
-   "source": [
-    "# Feature Scaling and Encoding  \n",
-    "Use a `ColumnTransformer` to preprocess columns based on their data type. This allows the appropriate transformation to each column type in a single step.  \n",
-    "- Scale numerical columns:\n",
-    "    - `StandardScaler`: Scales features to have mean = 0 and standard deviation = 1.\n",
-    "    - `MinMaxScaler`: Scales features to a range between [0, 1].\n",
-    "- Encode categorical columns:\n",
-    "    - Nominal columns: `OneHotEncoder` to convert string categories into binary (one-hot) encoded columns; use for unordered categories (e.g., red, green, blue).\n",
-    "    - Ordinal columns: `OrdinalEncoder` to convert string categories into integers; use for ordered categories (e.g., low, medium, high).\n",
-    "- Pass through boolean columns unchanged: Retain boolean features in their original form using `remainder=\"passthrough\"`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27495227-a7bd-4075-b19a-da91cb0fed5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define nominal and ordinal columns\n",
-    "nominal_columns = [\"nominal_column_1\", \"nominal_column_2\", \"nominal_column_3\"]\n",
-    "ordinal_columns = [\"ordinal_column_1\", \"ordinal_column_2\", \"ordinal_column_3\"]\n",
-    "\n",
-    "# Define the explicit order of categories for all ordinal columns\n",
-    "ordinal_column_orders = [\n",
-    "    [\"low\", \"medium\", \"high\"],  # Order for ordinal_column_1\n",
-    "    [\"poor\", \"average\", \"good\", \"excellent\"],  # Order for ordinal_column_2\n",
-    "    [\"small\", \"medium\", \"large\"]  # Order for ordinal_column_3\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff8131ac-71a4-48c7-bbf0-cecc33d66843",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize a column transformer \n",
-    "column_transformer = ColumnTransformer(\n",
-    "    transformers=[\n",
-    "        (\"scaler\", StandardScaler(), numerical_columns),  # Use MinMaxScaler() for min-max normalization\n",
-    "        (\"nominal_encoder\", OneHotEncoder(drop=\"first\"), nominal_columns),\n",
-    "        (\"ordinal_encoder\", OrdinalEncoder(categories=ordinal_column_orders), ordinal_columns)  \n",
-    "    ],\n",
-    "    remainder=\"passthrough\" \n",
-    ")\n",
-    "\n",
-    "# Fit the column transformer to the training data and apply transformations\n",
-    "X_train_transformed = column_transformer.fit_transform(X_train)\n",
-    "\n",
-    "# Apply the same transformations to the validation and test data\n",
-    "X_val_transformed = column_transformer.transform(X_val)\n",
-    "X_test_transformed = column_transformer.transform(X_test)"
    ]
   },
   {
