In machine_learning_template.ipynb > Data Preprocessing section: Move Polynomial Features section below Feature Scaling and Encoding section and update code to preserve column names and index for transformed data

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1367,6 +1367,83 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1200d328-586f-4c0c-b50e-9046fa2d7c6b",
+   "metadata": {},
+   "source": [
+    "## Polynomial Features\n",
+    "Create polynomial features in combination with feature scaling and encoding. Use a `ColumnTransformer` to preprocess columns based on their semantic type. This allows the appropriate transformation to each semantic column type in a single step.  \n",
+    "\n",
+    "- Numerical columns:\n",
+    "    - `Pipeline` to create polynomial features followed by feature scaling.\n",
+    "    - `PolynomialFeatures` to create polynomial terms (e.g., squared terms and interaction terms).\n",
+    "    - Feature scaling:\n",
+    "        - `StandardScaler`: Scales features to have mean = 0 and standard deviation = 1.\n",
+    "        - `MinMaxScaler`: Scales features to a range between [0, 1].\n",
+    "- Categorical columns: \n",
+    "    - Nominal columns: `OneHotEncoder` to convert string categories into binary (one-hot) encoded columns; use for unordered categories (e.g., red, green, blue).\n",
+    "    - Ordinal columns: `OrdinalEncoder` to convert string categories into integers; use for ordered categories (e.g., low, medium, high).\n",
+    "- Boolean columns: Retain in their original form using `remainder=\"passthrough\"`.\n",
+    "\n",
+    "Note: Polynomial features are commonly used with models such as linear regression, logistic regression, and elastic net regression to capture non-linear relationships and interactions between features. Polynomial features are often combined with Elastic Net regularization (balancing the effects of both Lasso and Ridge regularization) to prevent overfitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05cb6c0f-9335-4bd1-a205-6900b5a5125a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define nominal and ordinal columns\n",
+    "nominal_columns = [\"nominal_column_1\", \"nominal_column_2\", \"nominal_column_3\"]\n",
+    "ordinal_columns = [\"ordinal_column_1\", \"ordinal_column_2\", \"ordinal_column_3\"]\n",
+    "\n",
+    "# Define the explicit order of categories for all ordinal columns\n",
+    "ordinal_column_orders = [\n",
+    "    [\"low\", \"medium\", \"high\"],  # Order for ordinal_column_1\n",
+    "    [\"poor\", \"average\", \"good\", \"excellent\"],  # Order for ordinal_column_2\n",
+    "    [\"small\", \"medium\", \"large\"]  # Order for ordinal_column_3\n",
+    "]\n",
+    "\n",
+    "# Initialize a column transformer\n",
+    "column_transformer = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        # Numerical columns: Use a pipeline to create polynomial features followed by feature scaling \n",
+    "        (\"polynomial_scaler\", Pipeline([\n",
+    "            (\"polynomial\", PolynomialFeatures(degree=2, include_bias=False)),  # degree hyperparameter tuning is recommended \n",
+    "            (\"scaler\", StandardScaler())  # Use MinMaxScaler() for min-max normalization\n",
+    "        ]), numerical_columns),\n",
+    "        \n",
+    "        # Nominal columns: One-hot encoding\n",
+    "        (\"nominal_encoder\", OneHotEncoder(drop=\"first\"), nominal_columns),\n",
+    "\n",
+    "        # Ordinal Columns: Ordinal encoding with explicit category order\n",
+    "        (\"ordinal_encoder\", OrdinalEncoder(categories=ordinal_column_orders), ordinal_columns)  \n",
+    "    ],\n",
+    "    remainder=\"passthrough\"  # Keep boolean columns as they are\n",
+    ")\n",
+    "\n",
+    "# Fit the column transformer to the training data and apply transformations\n",
+    "X_train_transformed = column_transformer.fit_transform(X_train)\n",
+    "\n",
+    "# Apply the same transformations to the validation and test data\n",
+    "X_val_transformed = column_transformer.transform(X_val)\n",
+    "X_test_transformed = column_transformer.transform(X_test)\n",
+    "\n",
+    "# Get transformed column names\n",
+    "numerical_polynomial_columns = list(column_transformer.named_transformers_[\"polynomial_scaler\"].named_steps[\"polynomial\"].get_feature_names_out(numerical_columns))\n",
+    "nominal_encoded_columns = list(column_transformer.named_transformers_[\"nominal_encoder\"].get_feature_names_out())\n",
+    "passthrough_columns = list(X_train.columns.difference(numerical_columns + nominal_columns + ordinal_columns, sort=False))\n",
+    "transformed_columns = numerical_polynomial_columns + nominal_encoded_columns + ordinal_columns + passthrough_columns\n",
+    "\n",
+    "# Convert transformed data from arrays to DataFrames with column names \n",
+    "X_train_transformed = pd.DataFrame(X_train_transformed, columns=transformed_columns, index=X_train.index)\n",
+    "X_val_transformed = pd.DataFrame(X_val_transformed, columns=transformed_columns, index=X_val.index)\n",
+    "X_test_transformed = pd.DataFrame(X_test_transformed, columns=transformed_columns, index=X_test.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "63d48183-607c-4d2b-a462-7d22b0ee0fc4",
    "metadata": {},
    "source": [
@@ -2038,79 +2115,6 @@
     "\n",
     "# Show the plot\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa73dc8f-a53a-4feb-91ae-aa3bfd1a26df",
-   "metadata": {},
-   "source": [
-    "# Polynomial Features\n",
-    "Create polynomial features in addition to feature scaling and encoding. Use a `ColumnTransformer` to preprocess columns based on their data type. This allows the appropriate transformation to each column type in a single step.  \n",
-    "- Numerical columns:\n",
-    "    - `Pipeline` to create polynomial features followed by feature scaling.\n",
-    "    - `PolynomialFeatures` to create polynomial terms (e.g., squared terms and interaction terms).\n",
-    "    - Feature scaling:\n",
-    "        - `StandardScaler`: Scales features to have mean = 0 and standard deviation = 1.\n",
-    "        - `MinMaxScaler`: Scales features to a range between [0, 1].\n",
-    "- Categorical columns: \n",
-    "    - Nominal columns: `OneHotEncoder` to convert string categories into binary (one-hot) encoded columns; use for unordered categories (e.g., red, green, blue).\n",
-    "    - Ordinal columns: `OrdinalEncoder` to convert string categories into integers; use for ordered categories (e.g., low, medium, high).\n",
-    "- Boolean columns: Retain in their original form using `remainder=\"passthrough\"`.\n",
-    "\n",
-    "Note: Polynomial features are commonly used with models such as linear regression, logistic regression, and elastic net regression to capture non-linear relationships and interactions between features. Polynomial features are often combined with Elastic Net regularization (balancing the effects of both Lasso and Ridge regularization) to prevent overfitting."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "102df610-c4c8-4dfd-9e92-fd29f88abb08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define nominal and ordinal columns\n",
-    "nominal_columns = [\"nominal_column_1\", \"nominal_column_2\", \"nominal_column_3\"]\n",
-    "ordinal_columns = [\"ordinal_column_1\", \"ordinal_column_2\", \"ordinal_column_3\"]\n",
-    "\n",
-    "# Define the explicit order of categories for all ordinal columns\n",
-    "ordinal_column_orders = [\n",
-    "    [\"low\", \"medium\", \"high\"],  # Order for ordinal_column_1\n",
-    "    [\"poor\", \"average\", \"good\", \"excellent\"],  # Order for ordinal_column_2\n",
-    "    [\"small\", \"medium\", \"large\"]  # Order for ordinal_column_3\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05cb6c0f-9335-4bd1-a205-6900b5a5125a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize a column transformer\n",
-    "column_transformer = ColumnTransformer(\n",
-    "    transformers=[\n",
-    "        # Numerical columns: Use a pipeline to create polynomial features followed by feature scaling \n",
-    "        (\"polynomial_scaler\", Pipeline([\n",
-    "            (\"polynomial\", PolynomialFeatures(degree=2, include_bias=False)),  # degree hyperparameter tuning is recommended \n",
-    "            (\"scaler\", StandardScaler())  # Use MinMaxScaler() for min-max normalization\n",
-    "        ]), numerical_columns),\n",
-    "        \n",
-    "        # Nominal columns: One-hot encoding\n",
-    "        (\"nominal_encoder\", OneHotEncoder(drop=\"first\"), nominal_columns),\n",
-    "\n",
-    "        # Ordinal Columns: Ordinal encoding with explicit category order\n",
-    "        (\"ordinal_encoder\", OrdinalEncoder(categories=ordinal_column_orders), ordinal_columns)  \n",
-    "    ],\n",
-    "    remainder=\"passthrough\"  # Keep boolean columns as they are\n",
-    ")\n",
-    "\n",
-    "# Fit the column transformer to the training data and apply transformations\n",
-    "X_train_transformed = column_transformer.fit_transform(X_train)\n",
-    "\n",
-    "# Apply the same transformations to the validation and test data\n",
-    "X_val_transformed = column_transformer.transform(X_val)\n",
-    "X_test_transformed = column_transformer.transform(X_test)"
    ]
   },
   {
