In machine_learning_template.ipynb > Data Preprocessing > Feature Scaling and Encoding section: Preserve index of original data in transformed data

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1360,9 +1360,9 @@
     "transformed_columns = numerical_columns + nominal_encoded_columns + ordinal_columns + passthrough_columns\n",
     "\n",
     "# Convert transformed data from arrays to DataFrames with column names \n",
-    "X_train_transformed = pd.DataFrame(X_train_transformed, columns=transformed_columns)\n",
-    "X_val_transformed = pd.DataFrame(X_val_transformed, columns=transformed_columns)\n",
-    "X_test_transformed = pd.DataFrame(X_test_transformed, columns=transformed_columns)"
+    "X_train_transformed = pd.DataFrame(X_train_transformed, columns=transformed_columns, index=X_train.index)\n",
+    "X_val_transformed = pd.DataFrame(X_val_transformed, columns=transformed_columns, index=X_val.index)\n",
+    "X_test_transformed = pd.DataFrame(X_test_transformed, columns=transformed_columns, index=X_test.index)"
    ]
   },
   {
