In machine_learning_template.ipynb > Data Preprocessing > Saving Data section: Use df_train, df_val, and df_test instead of df

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1472,8 +1472,15 @@
     "# Create data directory if it doesn't exist\n",
     "os.makedirs(\"data\", exist_ok=True)\n",
     "\n",
+    "# Merge transformed X features and y target variable\n",
+    "df_train_transformed = pd.concat([X_train_transformed, y_train], axis=1)\n",
+    "df_val_transformed = pd.concat([X_val_transformed, y_val], axis=1)\n",
+    "df_test_transformed = pd.concat([X_test_transformed, y_test], axis=1)\n",
+    "\n",
     "# Save as .csv  \n",
-    "df.to_csv(\"data/preprocessed_data.csv\", index=False)"
+    "df_train_transformed.to_csv(\"data/df_train_preprocessed.csv\", index=False)\n",
+    "df_val_transformed.to_csv(\"data/df_val_preprocessed.csv\", index=False)\n",
+    "df_test_transformed.to_csv(\"data/df_test_preprocessed.csv\", index=False)"
    ]
   },
   {
@@ -1502,13 +1509,20 @@
     "mysql_database_name = \"your_mysql_database_name_here\"\n",
     "mysql_table_name = \"preprocessed_data\"\n",
     "\n",
+    "# Merge transformed X features and y target variable\n",
+    "df_train_transformed = pd.concat([X_train_transformed, y_train], axis=1)\n",
+    "df_val_transformed = pd.concat([X_val_transformed, y_val], axis=1)\n",
+    "df_test_transformed = pd.concat([X_test_transformed, y_test], axis=1)\n",
+    "\n",
     "try:\n",
     "    # Create an SQLAlchemy engine for interacting with the MySQL database\n",
     "    engine = create_engine(f\"mysql+mysqlconnector://{sql_username}:{sql_password}@{mysql_host}:{mysql_port}/{mysql_database_name}\")\n",
     "    \n",
     "    # Save data to MySQL \n",
     "    with engine.connect() as connection:\n",
-    "        df.to_sql(name=mysql_table_name, con=connection, if_exists=\"replace\", index=False)\n",
+    "        df_train_transformed.to_sql(name=\"df_train_preprocessed\", con=connection, if_exists=\"replace\", index=False)\n",
+    "        df_val_transformed.to_sql(name=\"df_val_preprocessed\", con=connection, if_exists=\"replace\", index=False)\n",
+    "        df_test_transformed.to_sql(name=\"df_test_preprocessed\", con=connection, if_exists=\"replace\", index=False)\n",
     "    \n",
     "    print(\"Preprocessed data successfully saved to MySQL.\")\n",
     "\n",
