In machine_learning_template.ipynb > EDA section: Update markdown documentation comments in Univariate EDA section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1544,7 +1544,7 @@
    "metadata": {},
    "source": [
     "## Univariate EDA  \n",
-    "Univariate exploratory data analysis (EDA) analyzes the distribution, central tendency, and variability of a single column using descriptive statistics and visualizations."
+    "Analyze the distribution of a single column using descriptive statistics and visualizations."
    ]
   },
   {
@@ -1553,7 +1553,7 @@
    "metadata": {},
    "source": [
     "### Numerical Columns  \n",
-    "Perform univariate EDA on numerical columns by examining descriptive statistics (such as mean, median, standard deviation and quartiles) and histograms for distributions."
+    "Examine descriptive statistics (e.g., mean, median, standard deviation, quartiles) and visualize the distributions (e.g., histogram) of numerical columns."
    ]
   },
   {
@@ -1643,7 +1643,7 @@
    "metadata": {},
    "source": [
     "### Categorical Columns  \n",
-    "Perform univariate EDA on categorical columns by examining descriptive statistics (such as absolute and relative frequencies) and bar plots of frequencies."
+    "Examine descriptive statistics (e.g., absolute and relative frequencies) and visualize the distributions (e.g., bar plot) of categorical columns."
    ]
   },
   {
