In machine_learning_template.ipynb, EDA > Univariate EDA > Numerical Columns section: Use X_train instead of df and update section header and documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1561,15 +1561,7 @@
    "id": "cfe81ae6-559e-432b-8cf2-8643b13ef6dd",
    "metadata": {},
    "source": [
-    "#### Descriptive Statistics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13c1f2c8-3fa9-4efb-b766-7c5d3621b789",
-   "metadata": {},
-   "source": [
-    "Single Column:"
+    "**Descriptive Statistics**"
    ]
   },
   {
@@ -1579,16 +1571,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Descriptive statistics of a single numerical column\n",
-    "df[\"numerical_column\"].describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "720ceaf9-308a-46d6-a0a4-dd81b796bdd6",
-   "metadata": {},
-   "source": [
-    "Multiple Columns:"
+    "# Descriptive statistics of single numerical column\n",
+    "X_train[\"numerical_column\"].describe()"
    ]
   },
   {
@@ -1598,8 +1582,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Table with descriptive statistics of all numerical columns\n",
-    "df[numerical_columns].describe().transpose()"
+    "# Table of descriptive statistics of all numerical columns\n",
+    "X_train[numerical_columns].describe().transpose()"
    ]
   },
   {
