In machine_learning_template.ipynb, EDA > Univariate EDA > Numerical Columns section: Rename Histogram section to Visualize Distributions, add histogram matrix for all numerical columns and use X_train instead of df

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1591,7 +1591,7 @@
    "id": "8b76c43e-ff1c-4477-8610-a103373b9383",
    "metadata": {},
    "source": [
-    "#### Histogram "
+    "**Visualize Distributions** "
    ]
   },
   {
@@ -1599,7 +1599,7 @@
    "id": "dc6c4705-ccfa-4b08-9789-9c5319d71e52",
    "metadata": {},
    "source": [
-    "Single Column:"
+    "Histogram of single numerical column."
    ]
   },
   {
@@ -1609,13 +1609,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create histogram of numerical column\n",
-    "sns.histplot(df[\"numerical_column\"])\n",
+    "# Create histogram \n",
+    "sns.histplot(X_train[\"numerical_column\"])\n",
     "\n",
     "# Add title and axes labels \n",
-    "plt.title(\"Distribution of numerical_column\")\n",
-    "plt.xlabel(\"numerical_column\")\n",
+    "plt.title(\"numerical_column\")\n",
     "plt.ylabel(\"Frequency\")\n",
+    "plt.xlabel(\"\")\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1357efeb-5ad1-4e15-875c-fce5e3a1b470",
+   "metadata": {},
+   "source": [
+    "Histogram matrix to show the distribution of all numerical columns in a 2x3 matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3800f59f-9b8e-4abc-95e2-0bb68a9f2526",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the figure size\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "# Iterate over the numerical columns\n",
+    "for i, column in enumerate(numerical_columns):\n",
+    "    # Create a subplot in a 2x3 grid (current subplot i+1 because subplot indices start at 1)\n",
+    "    plt.subplot(2, 3, i + 1)\n",
+    "    \n",
+    "    # Create histogram for the current column\n",
+    "    sns.histplot(X_train[column])\n",
+    "    \n",
+    "    # Add title and axes labels\n",
+    "    plt.title(column.title())\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "    plt.xlabel(\"\")\n",
+    "\n",
+    "# Adjust layout to prevent overlap\n",
+    "plt.tight_layout()\n",
     "\n",
     "# Show the plot\n",
     "plt.show()"
